# examples

./: .gitignore  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  secure_workflows.yml
a2a/python-agent/: Dockerfile  README.md  agent.py  requirements.txt
mcp/remote-server-py/: Dockerfile  README.md  requirements.txt  server.py
mcp/remote-server-ts/: Dockerfile  README.md  package.json  server.ts  tsconfig.json
native/node/: Dockerfile  README.md  device_flow.js  package.json
native/python/: Dockerfile  README.md  device_flow.py  requirements.txt
native/rust/: Cargo.toml  Dockerfile  README.md
spa/angular/: Dockerfile  README.md  angular.json  entrypoint.sh  package.json  tsconfig.json
spa/react/: README.md  entrypoint.sh  index.html  package.json
spa/sveltekit/: Dockerfile  README.md  entrypoint.sh  package.json
spa/vanilla-js/: Dockerfile  README.md  callback.html  entrypoint.sh  index.html  package.json
spa/vue/: Dockerfile  README.md  entrypoint.sh  index.html  package.json
web/aspnet-core/: Dockerfile  Program.cs  README.md  VouchExample.csproj
web/axum-openidconnect/: Cargo.toml  Dockerfile  README.md
web/axum-openidconnect/src/: main.rs
web/django-allauth/: Dockerfile  README.md  requirements.txt  settings.py  urls.py
web/express-passport/: Dockerfile  README.md  app.js  package.json
web/fastapi-authlib/: Dockerfile  README.md  main.py  requirements.txt
web/flask-authlib/: Dockerfile  README.md  app.py  requirements.txt
web/go-oidc/: Dockerfile  README.md  go.mod  go.sum  main.go
web/rails-omniauth/: Gemfile  (+2 more)
(+53 files in other folders)
